--- a/Index.css
+++ b/Index.css
@@ -1,61 +1,82 @@
-.norm{
-    width: 70%;
-    padding-top: 300px;
-    margin:  0 auto;
-    display: flex;
-    flex-wrap: wrap;
-    align-content: center;
+.no{
+    width: 100vw;
+}
+.wen{
+    margin-left: auto;
+    margin-right: auto;
+    width: 10vw;
+    height: 10vw;
+    margin-top: 20vw;
     perspective: 900px;
-    perspective-origin: 50% 50%; 
+    perspective-origin: 50%;
+    animation: 10s linear infinite orbit;
+}
+.norm{
+    position: relative;
+    transform-style: preserve-3d;
     animation: 10s linear infinite spin;
 }
-.port{
-    width: 200px; 
-    height: 200px;
-    margin: 0;
-    padding: 0;
+.norm> div{
+    font-size: 1.5em;
+    height: 10vw;
+    width: 10vw;
+    transition: opacity 300ms ease-in;
 }
-.r1:hover,.r2:hover,.r3:hover,.r4:hover,.r5:hover,.r6:hover{
+.norm> div:hover{
     opacity: 1;
 }
 .r1{
+    position: absolute;
     background-color: red;
-    opacity: 0.3;
-    transform: translateZ(100px);
+    opacity: 0.5;
+    transform: translateZ(10vw);
 }
 .r2{
+    position: absolute;
     background-color: brown;
-    opacity: 0.3;
-    transform: translateX(-300px) rotateY(-90deg);
+    opacity: 0.5;
+    transform: rotateY(-90deg);
+    transform-origin: left;
 }
 .r3{
+    position: absolute;
     background-color: blue;
-    opacity: 0.3;
-    transform: translateX(-300px) rotateY(90deg);
+    opacity: 0.5;
+    transform: rotateY(90deg);
+    transform-origin: right;
 }
 .r4{
+    position: absolute;
     background-color: green;
-    opacity: 0.3;
-    transform: translateX(-600px) translateZ(-100px);
+    opacity: 0.5;
 }
 .r5{
+    position: absolute;
     background-color: blueviolet;
-    opacity: 0.3;
-    transform: translateX(-800px) translateY(-100px) rotateX(-90deg);
+    opacity: 0.5;
+    transform:  rotateX(90deg);
+    transform-origin: top;
 }
 .r6{
+    position: absolute;
     background-color: black;
-    opacity: 0.3;
-    transform: translateX(-1000px) translateY(100px) rotateX(90deg);
+    opacity: 0.5;
+    transform: rotateX(-90deg);
+    transform-origin: bottom;
 }
 
    
 
 @keyframes spin {
+   100%{
+    transform: rotateX(360deg) rotateY(360deg);
+   }
+}
+@keyframes orbit {
     from{
-        transform: rotateY(0deg) rotateX(0deg) rotateZ(0deg) ;
+        transform: rotate(0deg) translateX(200px);
     }
     to{
-        transform: rotateY(360deg) rotateX(360deg) rotateZ(360deg) ;
+        transform: rotate(360deg) translateX(200px); 
     }
 }
